Fix single post title center alignment

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -346,6 +346,6 @@
 /* ============================================================
  * 单篇文章页标题居中
  * ============================================================ */
-.single .single-title {
+.page.single .single-title {
     text-align: center !important;
 }
